[metadata]
name = keepersdk
version = attr: keepersdk.__init__.__version__
description = Keeper SDK for Python 3
long_description = file: README.md
long_description_content_type = text/markdown
author = Keeper Security Inc.
author_email = commander@keepersecurity.com
url = https://github.com/Keeper-Security/keeper-sdk-python
license = MIT
classifiers =
    Environment :: Console
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Topic :: Security
keywords = security, password

[options]
python_requires = >=3.8
package_dir =
    = src
include_package_data = True
install_requires =
    attrs>=23.1.0
    requests>=2.32.2
    cryptography>=45.0.1
    protobuf>=5.28.3
    websockets>=13.1
    fido2>=2.0.0; python_version>='3.10'
    email-validator>=2.0.0
    pydantic>=2.6.4; python_version>='3.8'
    google-api-core>=2.16.0
    

[options.package_data]
keepersdk =
  resources/*